<resources>
    <string name="app_name">Components</string>
    <string name="menu_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="start_application">Start</string>
    <string name="uninstall_application">Uninstall</string>
    <string name="stop_application">Stop</string>
    <string name="app_info_version">Version %1$s (%2$s)</string>
    <string name="app_info_play_linked">This application was installed from Google Play</string>
    <string name="app_info_play_not_linked">This application was installed from unknown source</string>
    <string name="app_info_date">Installed on %1$s. Modified on %2$s</string>
    <string name="app_info_permissions">Permissions</string>
    <string name="app_info_no_permissions">No declared permissions</string>
    <string name="app_info_sd_installed">Application installed on external storage</string>
    <string name="app_info_not_installed">Application not installed</string>
    <string name="app_info_local_installed">Application installed</string>
    <string name="application_information">System information</string>
    <string name="application_play">Powered by Google Play</string>
</resources>
