<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

        <ImageView
                android:id="@+id/play_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" app:srcCompat="@mipmap/play_icon"/>

        <TextView
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/application_play"
                android:layout_toRightOf="@id/play_icon"
                android:singleLine="true"
                android:paddingTop="13dp"/>

    </LinearLayout>

    <View
            android:id="@+id/buttons_separador"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_above="@+id/buttons"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttons_separador"
            android:padding="10dp" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp">

                <ImageView
                        android:id="@+id/app_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop" />

                <TextView
                        android:id="@+id/app_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/app_icon"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceLarge" />


                <TextView
                        android:id="@+id/package_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/app_title"
                        android:layout_toRightOf="@id/app_icon"
                        android:textIsSelectable="true"/>

                <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/package_name"
                        android:layout_toRightOf="@id/app_icon"
                        android:singleLine="true"
                        android:text="@string/app_info_version" />

            </RelativeLayout>

            <View
                    android:id="@+id/title_separador"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/separator_height"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary" />

            <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:text="@string/app_info_not_installed" />

            <TextView
                    android:id="@+id/play_linked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/app_info_play_linked" />

            <LinearLayout
                    android:id="@+id/action_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/start_application"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:drawableTop="@android:drawable/ic_menu_slideshow"
                        android:text="@string/start_application"
                        android:singleLine="true" android:background="@color/btnColor" android:autoText="false"
                        android:textColor="@color/accent"/>


                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/uninstall_application"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:drawableTop="@android:drawable/ic_menu_delete"
                        android:text="@string/uninstall_application"
                        android:singleLine="true" android:background="@color/btnColor"
                        android:textColor="@color/accent"/>

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/stop_application"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
                        android:text="@string/stop_application"
                        android:singleLine="true" android:background="@color/btnColor"
                        android:textColor="@color/accent"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/app_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                <View
                        android:id="@+id/app_date_sep"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator_height"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary" />

                <TextView
                        android:id="@+id/app_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/app_info_date" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator_height"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorPrimary" />

                <TextView
                        android:id="@+id/permissions_title"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/app_info_permissions" />

                <TextView
                        android:id="@+id/permissions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/app_info_no_permissions" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>